smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits-on-namespace.smithy
// Parse error at line 5, column 1 near `namespace`: Traits cannot be applied to a `namespace` definition
namespace com.foo

@deprecated
namespace com.bar
